src/objects/Billing_GL_Posting__c.object
<CustomObject>
    <description>This report displays the amount to be posted by GL account for each posting period.</description>
    <fields>
        <fullName>Accounting_Period__c</fullName>
        <description>Billing accounting period</description>
        <label>Accounting_Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount to be posted for the specific GL Account</description>
        <inlineHelpText>Amount to be posted for the specific GL Account</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing account</description>
        <label>Billing_Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_GL_Posting_Seq__c</fullName>
        <description>External field sequence coming from Oracle</description>
        <externalId>true</externalId>
        <inlineHelpText>External field sequence coming from Oracle</inlineHelpText>
        <label>Billing_GL_Posting_Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSM_Publication_Code__c</fullName>
        <description>CRSM Publication Code for the amount</description>
        <inlineHelpText>CRSM Publication Code for the amount</inlineHelpText>
        <label>CRSM Publication Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Period__c</fullName>
        <formula>DATE( VALUE( RIGHT( Accounting_Period__c, 2 )) + 2000, VALUE( LEFT( Accounting_Period__c, 2 )), 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>SAP mapping company code</description>
        <label>Company_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>SPH Cost Center to which the amount is posted</description>
        <inlineHelpText>SPH Cost Center to which the amount is posted</inlineHelpText>
        <label>Cost Center</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <label>Doc Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <description>SAP GL Accounting Code to which the amount is posted</description>
        <inlineHelpText>SAP GL Accounting Code to which the amount is posted</inlineHelpText>
        <label>GL Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <description>Date when posting is done</description>
        <label>Posting Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Key__c</fullName>
        <description>SAP mapping posting key</description>
        <label>Posting_Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Period__c</fullName>
        <description>Accounting period</description>
        <label>Posting Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <description>SPH Profit Center to which the amount is posted</description>
        <inlineHelpText>SPH Profit Center to which the amount is posted</inlineHelpText>
        <label>Profit Center</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity for the amount being posted (where applicable)</description>
        <inlineHelpText>Quantity for the amount being posted (where applicable)</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Code__c</fullName>
        <description>SAP Product Code to which the amount is posted</description>
        <inlineHelpText>SAP Product Code to which the amount is posted</inlineHelpText>
        <label>SAP Product Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <description>Subscription id</description>
        <label>Subscription_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>GL posting description</description>
        <label>Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trading_Partner__c</fullName>
        <description>SAP mapping trader partner</description>
        <label>Trading_Partner</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Billing GL Posting Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Billing_GL_Posting_Reports</fullName>
        <columns>GL_Code__c</columns>
        <columns>Cost_Center__c</columns>
        <columns>Profit_Center__c</columns>
        <columns>SAP_Product_Code__c</columns>
        <columns>CRSM_Publication_Code__c</columns>
        <columns>Quantity__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Billing GL Posting Reports</label>
    </listViews>
    <nameField>
        <label>Billing GL Posting Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing GL Posting Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>